# cerise

./: .gitattributes  Makefile  README.md  dune-project
.github/workflows/: build_and_test.yml
cerise/: cerise.opam  dune-project
cerise/lib/: blast.ml  cli.ml  cli.mli  clusters.ml  clusters.mli  diamond.ml  dune  mmseqs.ml  opts.ml  utils.ml
cerise/test/: dune
cerise/test/blastp_search.t/: clustered_queries.fasta  clustered_targets.fasta  expected_first_search__both.tsv  expected_new_queries__both.txt  expected_new_targets__clustered_queries.txt  expected_second_search__both.tsv  expected_second_search__clustered_queries.tsv  expected_second_search__clustered_targets.tsv  extra_config.txt  queries.fasta  query_clusters.tsv  run.t  target_clusters.tsv  targets.fasta
cerise/test/cli_errors.t/: run.t
cerise/test/diamond_search.t/: expected_first_search__clustered_queries.tsv  expected_new_queries__both.txt  expected_second_search__clustered_targets.tsv  extra_config.txt  queries.fasta  query_clusters.tsv  run.t  target_clusters.tsv  targets.fasta
cerise/test/mmseqs_search.t/: bad_query_clusters.tsv  clustered_queries.fasta  clustered_targets.fasta  expected_new_targets__clustered_targets.txt  expected_outfiles__both.txt  expected_outfiles__clustered_queries.txt  expected_outfiles__clustered_targets.txt  expected_second_search__both.tsv  expected_second_search__clustered_queries.tsv  extra_config.txt  run.t  silly_queries.faa
command_runner/: abstract_runner.ml  command.ml  command_runner.opam  dune  dune-project  extra_config.ml  runner.ml
command_runner/test/: dune  test_runner.ml
command_runner/test/test_files/: printer.sh
